sumo/tests/dfrouter/errors/no_output/errors.dfrouter.exe
Error: The detector file is not given or can not be opened.
Quitting (on error).
